Fix blog content spacing overlapping hero

--- a/assets/section-blog-post.css
+++ b/assets/section-blog-post.css
@@ -1,10 +1,10 @@
-.article-template > *:first-child:not(.article-template__hero-container) {
-  margin-top: 5rem;
+.article-template>*:first-child:not(.article-template__hero-container) {
+  margin-top: 8rem;
 }
 
 @media screen and (min-width: 750px) {
-  .article-template > *:first-child:not(.article-template__hero-container) {
-    margin-top: calc(5rem + var(--page-width-margin));
+  .article-template>*:first-child:not(.article-template__hero-container) {
+    margin-top: calc(8rem + var(--page-width-margin));
   }
 }
 
@@ -96,8 +96,8 @@
   margin-top: 3rem;
 }
 
-.article-template__social-sharing + header,
-.article-template__social-sharing + .article-template__content {
+.article-template__social-sharing+header,
+.article-template__social-sharing+.article-template__content {
   margin-top: 1.5rem;
 }
 
@@ -148,7 +148,7 @@
   margin: 0 0 1rem;
 }
 
-.article-template__comment-fields > * {
+.article-template__comment-fields>* {
   margin-bottom: 3rem;
 }
 
